fix: OverflowMenu 가려짐 문제 해결 / DP-408

--- a/src/features/Ranking/components/RegionalRankingSection/RegionalRankingSection.module.scss
+++ b/src/features/Ranking/components/RegionalRankingSection/RegionalRankingSection.module.scss
@@ -3,7 +3,6 @@
 .container {
   margin-bottom: 32px;
   border-radius: $r-small;
-  overflow: hidden;
   background-color: $white-3;
   box-shadow: 0 2px 8px rgb(0 0 0 / 8%);
 }
